Revert "Remove associations.physio"
This reverts commit 8c97ae1c3018006c52eabcd31d59a35539bbd690.

--- a/src/schema/meta/associations.yaml
+++ b/src/schema/meta/associations.yaml
@@ -100,3 +100,12 @@ electrodes:
     entities:
       - space
   inherit: true
+
+physio:
+  selectors:
+    - 'task in entities'
+    - extension != '.json'
+  target:
+    suffix: physio
+    extension: .tsv.gz
+  inherit: false
