--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -121,6 +121,11 @@ markdown_extensions:
         - name: tsvgz
           class: tsv
           format: !!python/name:bidsschematools.render.tsv.fence
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - admonition
   - pymdownx.details
 plugins:
