--- a/src/schema/meta/expression_tests.yaml
+++ b/src/schema/meta/expression_tests.yaml
@@ -46,6 +46,8 @@
   result: null
 - expression: length(null)
   result: null
+- expression: unique(null)
+  result: null
 - expression: type(null)
   result: 'null'
 - expression: null == false
@@ -141,3 +143,13 @@
   result: 3
 - expression: '"string"[0]'
   result: 's'
+- expression: unique([])
+  result: []
+- expression: unique([52, -4, 3, 8, -4, 52, 9])
+  result: [52, -4, 3, 8, 9]
+- expression: unique(["52", "-4", "3", "8", "-4", "52", "9"])
+  result: ["52", "-4", "3", "8", "9"]
+- expression: unique([1, 1.0])
+  result: [1]
+- expression: unique([1.0, 1])
+  result: [1.0]
