--- a/src/schema/rules/tabular_data/modality_agnostic.yaml
+++ b/src/schema/rules/tabular_data/modality_agnostic.yaml
@@ -22,6 +22,7 @@ Participants:
 
 Phenotypes:
   selectors:
+    - datatype == "phenotype"
     - extension == ".tsv"
   initial_columns:
     - participant_id
