--- a/src/schema/rules/tabular_data/modality_agnostic.yaml
+++ b/src/schema/rules/tabular_data/modality_agnostic.yaml
@@ -29,16 +29,14 @@ Phenotypes:
   columns:
     participant_id:
       level: required
-      description: |
-        MUST be the first column in the file.
+      description_addendum: |
         Note that data for one participant MAY be represented across multiple rows
         in case of multiple sessions or runs, and
         therefore the entry in the `participant_id` column will be repeated.
     session_id:
       level: optional
       level_addendum: required if sessions are defined in the dataset
-      description: |
-        REQUIRED if sessions are defined in the dataset.
+      description_addendum: |
         A `session_id` column MUST be added to all tabular files in the phenotype directory
         as soon as multiple sessions are present in the data set
         regardless of whether those sessions are in the
@@ -46,17 +44,16 @@ Phenotypes:
     run_id:
       level: optional
       level_addendum: required if there are multiple runs within any session
-      description: |
-        REQUIRED if there are multiple runs within any session.
+      description_addendum: |
         A chronological `run` number is used when
         a measurement tool or assessment described by a tabular file
         was repeated within a session.
-    acq_time__scans:
+    acq_time__phenotype:
       level: optional
-      description: |
+      description_addendum: |
         If acquisition time is available, the `acq_time` column CAN be used
         to record the time of acquisition of each row in the tabular file.
-  index_columns: [participant_id, session_id, run_id, acq_time__scans]
+  index_columns: [participant_id, session_id, run_id, acq_time__phenotype]
   additional_columns: allowed
 
 Samples:
