--- a/src/schema/objects/suffixes.yaml
+++ b/src/schema/objects/suffixes.yaml
@@ -504,12 +504,12 @@ VFA:
     ([Deoni et al. 2005](https://doi.org/10.1002/mrm.20314)).
 act:
   value: act
-  display_name: Provenance Activity Records
+  display_name: Provenance activity records
   description: |
-    Provenance Activity records for a group of provenance.
+    Provenance activity records for a group of provenance.
     Activities represent the transformations that have been applied to the data.
-    Files with the `act` suffix must define the `Activities` metadata, which is an array of `Activity` records.
-    See the [`Activity` records](SPEC_ROOT/modality-agnostic-files/provenance.md#activity-records) section.
+    Files with the `act` suffix must define the `Activities` metadata, which is an array of activity records.
+    See the [`Activities`](SPEC_ROOT/modality-agnostic-files/provenance.md#activities) section.
 angio:
   value: angio
   display_name: Angiogram
@@ -622,20 +622,20 @@ electrodes:
     File that gives the location of (i)EEG electrodes.
 ent:
   value: ent
-  display_name: Provenance Entity Records
+  display_name: Provenance entity records
   description: |
-    Provenance Entity records for a group of provenance.
-    Entities are inputs and outputs for Activities.
-    Files with the `ent` suffix must define the `Entities` metadata, which is an array of `Entity` records.
-    See the [`Entity` records](SPEC_ROOT/modality-agnostic-files/provenance.md#entity-records) section.
+    Provenance entity records for a group of provenance.
+    Entities are inputs and outputs for activities.
+    Files with the `ent` suffix must define the `Entities` metadata, which is an array of entity records.
+    See the [`Entities`](SPEC_ROOT/modality-agnostic-files/provenance.md#entities) section.
 env:
   value: env
-  display_name: Provenance Environment Records
+  display_name: Provenance environment records
   description: |
-    Provenance Environment records for a group of provenance.
+    Provenance environment records for a group of provenance.
     Environments specify the software environment in which the provenance record was obtained.
-    Files with the `env` suffix must define the `Environments` metadata, which is an array of `Environment` records.
-    See the [`Environment` records](SPEC_ROOT/modality-agnostic-files/provenance.md#environment-records) section.
+    Files with the `env` suffix must define the `Environments` metadata, which is an array of environment records.
+    See the [`Environments`](SPEC_ROOT/modality-agnostic-files/provenance.md#environments) section.
 epi:
   value: epi
   display_name: EPI
@@ -843,12 +843,12 @@ probseg:
     This suffix may only be used in derivative datasets.
 soft:
   value: soft
-  display_name: Provenance Software Records
+  display_name: Provenance software records
   description: |
-    Provenance Software records for a group of provenance.
+    Provenance software records for a group of provenance.
     Software specifies the software package with which transformations were applied to the data.
-    Files with the `soft` suffix must define the `Software` metadata, which is an array of `Software` records.
-    See the [`Software` records](SPEC_ROOT/modality-agnostic-files/provenance.md#software-records) section.
+    Files with the `soft` suffix must define the `Software` metadata, which is an array of software records.
+    See the [`Softwares`](SPEC_ROOT/modality-agnostic-files/provenance.md#software) section.
 sbref:
   value: sbref
   display_name: Single-band reference image
