--- a/src/schema/objects/files.yaml
+++ b/src/schema/objects/files.yaml
@@ -73,10 +73,7 @@ participants:
     If this file exists, it MUST contain the column `participant_id`,
     which MUST consist of `sub-<label>` values identifying one row for each participant,
     followed by a list of optional columns describing participants.
-    For participants with multiple sessions, the `session_id` column MAY be used
-    and, when present, MUST be the second column in the file.
-    Each pairing of `participant_id` and `session_id` MUST be unique.
-    When `session_id` is not in use, each participant MUST be described by one and only one row.
+    For participants with multiple sessions, the `session_id` column is RECOMMENDED.
 
     The `participant_id` entries MUST be a superset of all subject directories
     and all `participant_id` entries found among phenotypic and assessment data
