Apply suggestions from code review
Co-authored-by: Julia-Katharina Pfarr <111446107+julia-pfarr@users.noreply.github.com>

--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -1395,12 +1395,12 @@ FlipAngle:
         unit: degree
         exclusiveMinimum: 0
         maximum: 360
-ForeignIndexColumn:
-  name: ForeignIndexColumn
-  display_name: Column Name of a Foreign Index
+OnsetSource:
+  name: OnsetSource
+  display_name: Column Name of the Onset Source
   description: |
     An existing column name in an corresponding recoding data TSV file that
-    indexes the `"onset"` column of the present TSV file.
+    indexes or is correspondent to the `"onset"` column of the present TSV file.
     For example, `"timestamp"` column.
   type: string
 Format:
