--- a/src/schema/rules/checks/eyetrack.yaml
+++ b/src/schema/rules/checks/eyetrack.yaml
@@ -16,17 +16,17 @@ EyetrackingStimulusPresentation:
     - '"ScreenResolution" in associations.events.sidecar.StimulusPresentation'
     - '"ScreenSize" in associations.events.sidecar.StimulusPresentation'
 
-ForeignColumnConsistency:
+OnsetSourceConsistency:
   issue:
-    code: MISSING_FOREIGN_COLUMN
+    code: MISSING_ONSET_COLUMN
     level: error
     message: >
-      The `physioevents.tsv.gz` file declared a `ForeignIndexColumn` of
-      {sidecar.ForeignIndexColumn}, but no such column was found in
+      The `physioevents.tsv.gz` file declared a `OnsetSource` of
+      {sidecar.OnsetSource}, but no such column was found in
       {associations.physio.path}.
   selectors:
     - suffix == 'physioevents'
     - extension == '.tsv.gz'
-    - sidecar.ForeignIndexColumn
+    - sidecar.OnsetSource
   checks:
-    - intersects([sidecar.ForeignIndexColumn], associations.physio.sidecar.Columns)
+    - intersects([sidecar.OnsetSource], associations.physio.sidecar.Columns)
