feat: Allow datacite.yml

--- a/src/schema/rules/files/common/core.yaml
+++ b/src/schema/rules/files/common/core.yaml
@@ -8,6 +8,9 @@ dataset_description:
 CITATION:
   level: optional
   path: CITATION.cff
+datacite:
+  level: optional
+  path: datacite.yml
 README:
   level: recommended
   stem: README
