Add omission of microephys datatypes for overall channel file rule

--- a/src/schema/rules/checks/channels.yaml
+++ b/src/schema/rules/checks/channels.yaml
@@ -42,5 +42,6 @@ RequiredCoordsystem:
   selectors:
     - suffix == "electrodes"
     - extension == ".tsv"
+    - '!intersects([datatype], ["ecephys", "icephys"])'
   checks:
     - associations.coordsystem != null
