--- a/src/schema/rules/tabular_data/modality_agnostic.yaml
+++ b/src/schema/rules/tabular_data/modality_agnostic.yaml
@@ -103,9 +103,11 @@ Phenotype:
   initial_columns:
     - participant_id
     - session_id
+    - run_id
   columns:
     participant_id: required
     session_id: optional
+    run_id: optional
     HED: optional
-  index_columns: [participant_id, session_id]
+  index_columns: [participant_id, session_id, run_id]
   additional_columns: allowed
