--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -28,9 +28,9 @@ jobs:
         with:
           node-version: 22
       - name: Install dependencies
-        run: npm install `cat npm-requirements.txt`
+        run: npm install
       - name: Run style checks
-        run: npx remark src/**/*.md --frail --rc-path .remarkrc
+        run: npm run remark
 
   # YAML
   yamllint:
