--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "remark-lint-no-trailing-spaces": "^3.0.2",
     "remark-preset-lint-markdown-style-guide": "^6.0.1",
     "remark-preset-lint-recommended": "^7.0.1",
+    "prettier": "^3.6.2",
     "all-contributors-cli": "^6.26.1"
   }
 }
