--- a/src/schema/objects/suffixes.yaml
+++ b/src/schema/objects/suffixes.yaml
@@ -506,7 +506,7 @@ act:
   value: act
   display_name: Activities
   description: |
-    A JSON file containing provenance records describing activities
+    A JSON file containing provenance objects describing activities.
     (see the [`Activities`](SPEC_ROOT/modality-agnostic-files/provenance.md#activities) section).
 angio:
   value: angio
@@ -622,13 +622,13 @@ ent:
   value: ent
   display_name: Entities
   description: |
-    A JSON file containing provenance records describing entities
+    A JSON file containing provenance objects describing entities.
     (see the [`Entities`](SPEC_ROOT/modality-agnostic-files/provenance.md#entities) section).
 env:
   value: env
   display_name: Environments
   description: |
-    A JSON file containing provenance records describing environments
+    A JSON file containing provenance objects describing environments.
     (see the [`Environments`](SPEC_ROOT/modality-agnostic-files/provenance.md#environments) section).
 epi:
   value: epi
@@ -839,7 +839,7 @@ soft:
   value: soft
   display_name: Software
   description: |
-    A JSON file containing provenance records describing software
+    A JSON file containing provenance objects describing software.
     (see the [`Software`](SPEC_ROOT/modality-agnostic-files/provenance.md#software) section).
 sbref:
   value: sbref
